* (bug 11342) Fix several 'returnto' links in permissions/error pages which
  linked to the main page instead of targetted page
* Strike the link to the redirect rather than using an asterisk in Special:Listredirects
* (bug 11355) Fix false positives in Safe Mode and other config detection
  when boolean settings are disabled with 'Off' via php_admin_value/php_value

=== API changes in 1.12 ===

Full API documentation is available at http://www.mediawiki.org/wiki/API

* (bug 11275) Enable descending sort in categorymembers
* (bug 11308) Allow the API to output the image metadata

=== Languages updated in 1.12 ===

* Arabic (ar)
* Mapudungun (arn) (new)
* Bikol Central (bcl)
* Belarusian Taraskievica orthography (be-tarask)
* Bengali (bn)
* Catalan (ca)
* Czech (cs)
* Cassubian (csb)
* Welsh (cy)
* Danish (da)
* German (de)
* Lower Sorbian (dsb)
* Greek (el)
* Spanish (es)
* Extremaduran (ext)
* Persian (fa)
* Võro (fiu-vro)
* Frisian (fy)
* French (fr)
* Hebrew (he)
* Upper Sorbian (hsb)
* Indonesian (id)
* Icelandic (is)
* Kazakh (kk)
* Korean (ko)
* Low Saxon (nds)
* Dutch (nl)
* Russian (ru)
* Sakha (sah)
* Sicilian (scn)
* Slovak (sk)
* Serbian (Cyrillic) (sr-ec)
* Sundanese (su)
* Tamil (ta)
* Tetun (tet) (new)
* Walloon (wa)
* Zhuang (za)
* Zealandic (zea)

== Compatibility ==

MediaWiki 1.12 requires PHP 5 (5.1 recommended). PHP 4 is no longer supported.

PHP 5.0.x fails on 64-bit systems due to serious bugs with array processing:
http://bugs.php.net/bug.php?id=34879
Upgrade affected systems to PHP 5.1 or higher.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.12 has several database changes since 1.11, and will not work without schema
updates.

If upgrading from before 1.7, you may want to run refreshLinks.php to ensure
new database fields are filled with data.
